--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 concurrency:
   group: process-json-${{ github.ref }}
   cancel-in-progress: true
