--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -59,6 +59,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add records/processed/*
+          git add records/*
           git commit -m "Move processed JSON files"
           git push
