--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -32,9 +32,11 @@ jobs:
         with:
           node-version: "22"
           cache: "yarn"
+          cache-dependency-path: actions/yarn.lock
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
+        working-directory: ./actions
 
       - name: Find newly added JSON files
         id: find-json
@@ -51,7 +53,7 @@ jobs:
         run: |
           for file in $NEW_JSON_FILES; do
             echo "Processing $file..."
-            node process.js "$file"
+            node actions/process.js "$file"
           done
 
       - name: Commit and push changes
@@ -60,5 +62,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add records/*
-          git commit -m "Move processed JSON files"
+          git commit -m "Process new JSON files from #${{ github.event.pull_request.number }}" || exit 0
           git push
