--- a/records/new/reply.json.example
+++ b/records/new/reply.json.example
@@ -1,6 +1,6 @@
 {
   "action": "reply",
   "account": "PIXEL",
-  "richText": "Hello, world! @joyeecheung.bsky.social",
+  "richText": "Reply from automation",
   "replyURL": "https://bsky.app/profile/pixel-voyager.bsky.social/post/3lbg7zd32an2s"
 }
